Bug fix - Radio and Checkbox fields now display correctly in form builder. (not the best fix, but dosen't break the world)

--- a/includes/css/mfcs.css
+++ b/includes/css/mfcs.css
@@ -182,6 +182,9 @@ ul.checkboxList{
 ul.checkboxList label{
 	width: initial;
 }
+div.checkboxList label{
+	display: block;
+}
 #objectSubmitProcessing{
 	display: none;
 	width: 120px;
